@@ -37,9 +37,12 @@ components.
     git clone git://github.com/foss-for-synopsys-dwc-arc-processors/gdb.git
     git clone git://github.com/foss-for-synopsys-dwc-arc-processors/newlib.git
     git clone git://github.com/foss-for-synopsys-dwc-arc-processors/uClibc.git
-    git clone git://github.com/foss-for-synopsys-dwc-arc-processors/linux.git
+    git clone git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable.git linux
     git clone git://github.com/foss-for-synopsys-dwc-arc-processors/toolchain.git
     cd toolchain
+
+For convenience, the script `arc-clone-all.sh` in this repository will clone
+all the repositories for you.
 
 Building the tool chain
 -----------------------
